# FastApi

./: README.md  requirements.txt
BeyondCrud/: requirements.txt
BeyondCrud/src/: __init__.py
BeyondCrud/src/books/: book_data.py  routes.py  schemas.py
Claud/: main.py  sql_app.db
Claud/User_Registration/: main.py
Claud/database-connection/: crud.py  main.py  models.py  schemas.py
Claud/fastapi_env/: pyvenv.cfg
Claud/fastapi_env/Scripts/: activate  activate.bat
Day3/: main.py
Production/: .coverage  .env  docker-compose.yml  pyproject.toml
Production/app/: config.py  conftest.py  main.py  static_values.py
Production/app/routers/auth/: auth.py  models.py
Production/app/routers/todos/: models.py  test_todos.py  todos.py
Production/app/utilities/: db.py  logger.py
basics/: main.py
projects/: main.py  models.py  requirements.txt
projects/env/: pyvenv.cfg
projects/env/Scripts/: activate  activate.bat
todoapp/: main.py  requirements.txt
